feat(topic): update docs, elasticsearch client, and handlers
